--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a {
 }
 
 .landingMain .buttonz .btn {
-  background-color: orange;
+  background-color: black;
 }
 
 .landingMain .buttonz .btn:hover {
